Fit polybar to rice style
Streamlined config

--- a/config/polybar/.config/polybar/colors.ini
+++ b/config/polybar/.config/polybar/colors.ini
@@ -1,3 +1,5 @@
 [color]
-background = #292929
-foreground = #C5C8C6
+    background = #0D0E00
+    foreground = #C5C8C6
+    highlight = #5E8D87
+    border = #373B41
