--- a/config/polybar/.config/polybar/modules.ini
+++ b/config/polybar/.config/polybar/modules.ini
@@ -1,147 +1,60 @@
-; Config created by KevinNThomas (https://kevinthomas.dev)
-;
-; Based on https://github.com/adi1090x/polybar-themes/tree/master/polybar-4
-; by adi1090x
+; github.com/mmskv
+; 2021
 
 [module/alsa]
-type = internal/alsa
+    type = internal/alsa
+    format-volume = <ramp-volume> <label-volume>
+    label-volume = %{A3:pavucontrol-qt:}%percentage%%%{A}
 
-; Soundcard to be used
-; Usually in the format hw:# where # is the card number
-; You can find the different card numbers in `/proc/asound/cards`
-;;master-soundcard = default
-;;speaker-soundcard = default
-;;headphone-soundcard = default
+    format-muted-prefix = 
+    label-muted = " Muted"
 
-; Name of the master, speaker and headphone mixers
-; Use the following command to list available mixer controls:
-; $ amixer scontrols | sed -nr "s/.*'([[:alnum:]]+)'.*/\1/p"
-; If master, speaker or headphone-soundcard isn't the default, 
-; use `amixer -c # scontrols` instead where # is the number 
-; of the master, speaker or headphone soundcard respectively
-;
-; Default: Master
-;;master-mixer = Master
+    ramp-volume-0 = 
+    ramp-volume-1 = 
+    ramp-volume-2 = 
+    ramp-volume-3 = 
+    ramp-volume-4 = 
 
-; Optionally define speaker and headphone mixers
-; Default: none
-;;speaker-mixer = Speaker
-; Default: none
-;;headphone-mixer = Headphone
-
-; NOTE: This is required if headphone_mixer is defined
-; Use the following command to list available device controls
-; $ amixer controls | sed -r "/CARD/\!d; s/.*=([0-9]+).*name='([^']+)'.*/printf '%3.0f: %s\n' '\1' '\2'/e" | sort
-; You may also need to use `amixer -c # controls` as above for the mixer names
-; Default: none
-;;headphone-id = 9
-
-; Use volume mapping (similar to amixer -M and alsamixer), where the increase in volume is linear to the ear
-; Default: false
-;;mapped = true
-
-; Interval for volume increase/decrease (in percent points)
-; Default: 5
-;;interval = 5
-
-; Available tags:
-;   <label-volume> (default)
-;   <ramp-volume>
-;   <bar-volume>
-format-volume = <ramp-volume> <label-volume>
-
-; Available tags:
-;   <label-muted> (default)
-;   <ramp-volume>
-;   <bar-volume>
-;format-muted = <label-muted>
-
-; Available tokens:
-;   %percentage% (default)
-label-volume = %{A3:pavucontrol-qt:}%percentage%%%{A}
-
-; Available tokens:
-;   %percentage% (default
-format-muted-prefix = 
-label-muted = " Muted"
-label-muted-foreground = ${color.red}
-
-; Only applies if <ramp-volume> is used
-ramp-volume-0 = 
-ramp-volume-1 = 
-ramp-volume-2 = 
-ramp-volume-3 = 
-ramp-volume-4 = 
-
-; If defined, it will replace <ramp-volume> when
-; headphones are plugged in to `headphone_control_numid`
-; If undefined, <ramp-volume> will be used for both
-; Only applies if <ramp-volume> is used
-ramp-headphones-0 = 
-ramp-headphones-1 = 
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+    ramp-headphones-0 = 
+    ramp-headphones-1 = 
 
 [module/xkeyboard]
-type = internal/xkeyboard
-blacklist-0 = num lock
-blacklist-1 = scroll lock
-label-layout = %layout%
-label-layout-padding = 3
-label-layout-foreground = ${colors.fg-one}
-label-layout-background = ${colors.bg-one}
-label-indicator = %icon%
-format = <label-layout> 
-format-spacing = 3
-format-foreground = ${colors.fg-one}
+    type = internal/xkeyboard
 
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+[module/battery]
+    type = internal/battery
+    full-at = 97
+    battery = BAT0
+    adapter = ADP1
+    poll-interval = 5
+    time-format = %H:%M
+    label-full =  Full
+    label-charging =  %percentage%%, %time%
+    label-discharging =  %percentage%%, %time%
+
+[module/network]
+    type = internal/network
+    interface = wlan0
+    interval = 3.0
+    label-connected =  %downspeed%
+    label-disconnected =   
 
 [module/clock]
-type = custom/script
-exec = "date +'%a, %-d %b at %R'"
-format = <label>
-interval = 1.0
-format-foreground =  ${colors.fg-one}
-format-background =  ${colors.bg-one}
-format-padding = 3
+;   in label-font indexes start with one, so use font+1
+    label-font = 4
+    type = custom/script
+    exec = "date +'%a, %-d %b at %R'"
+    interval = 1.0
 
 [module/bspwm]
-type = internal/bspwm
-
-format = <label-state>
-
-label-focused-foreground = #5e8d87
-
-; Only show workspaces defined on the same output as the bar
-; NOTE: The bspwm and XRandR monitor names must match, which they do by default.
-; But if you rename your bspwm monitors with bspc -n this option will no longer
-; behave correctly.
-; Default: true
-pin-workspaces = true
-
-; Output mode flags after focused state label
-; Default: false
-inline-mode = false
-
-; Create click handler used to focus workspace
-; Default: true
-enable-click = true
-
-; Create scroll handlers used to cycle workspaces
-; Default: true
-enable-scroll = true
-
-; Set the scroll cycle direction 
-; Default: true
-reverse-scroll = true
-
-; Use fuzzy (partial) matching on labels when assigning 
-; icons to workspaces
-; Example: code;♚ will apply the icon to all workspaces 
-; containing 'code' in the label
-; Default: false
-fuzzy-match = false
-
-label-separator = |
-label-separator-padding = 1
+    type = internal/bspwm
+    label-focused-foreground = ${color.highlight}
+    pin-workspaces = true
+    inline-mode = false
+    enable-click = true
+    fuzzy-match = false
+    label-separator = |
+;   looks like there is a default right padding
+;   perhaps due to the characters being wider than normal
+    label-separator-padding-right = 0
+    label-separator-padding-left = 1
