Add calendar config

--- a/config/neovim/.config/nvim/coc-settings.json
+++ b/config/neovim/.config/nvim/coc-settings.json
@@ -1,22 +1,22 @@
 {
-"coc.preferences.formatOnSaveFiletypes": ["javascript", "markdown", "c++", "cpp", "hpp", "python"],
-"tsserver.maxTsServerMemory": 10000,
-"eslint.autoFixOnSave":true,
-"eslint.format.enable":true,
-"eslint.lintTask.options":["src/*"],
-"eslint.alwaysShowStatus":true,
-"prettier.tabWidth":4,
-"prettier.singleQuote": true,
-"prettier.printWidth": 120,
-"clangd.path": "/home/nekohacker/.config/coc/extensions/coc-clangd-data/install/12.0.0/clangd_12.0.0/bin/clangd",
-"clangd.semanticHighlighting": true,
-"clangd.arguments": ["--clang-tidy"],
-"clangd.fallbackFlags": ["-std=c++20"],
-"python.pythonPath": "venv/bin/python",
-"python.linting.enabled": true,
-"python.linting.pylintEnabled": true,
-"python.linting.pylintPath": ".venv/bin/pylint",
-"python.venvPath": ".venv",
-"python.formatting.provider": "yapf",
-"python.formatting.yapfPath": "/home/nekohacker/.local/bin/yapf"
+    "coc.preferences.formatOnSaveFiletypes": ["javascript", "markdown", "c++", "cpp", "hpp", "python"],
+    "tsserver.maxTsServerMemory": 10000,
+    "eslint.autoFixOnSave":true,
+    "eslint.format.enable":true,
+    "eslint.lintTask.options":["src/*"],
+    "eslint.alwaysShowStatus":true,
+    "prettier.tabWidth":4,
+    "prettier.singleQuote": true,
+    "prettier.printWidth": 120,
+    "clangd.path": "/home/nekohacker/.config/coc/extensions/coc-clangd-data/install/12.0.0/clangd_12.0.0/bin/clangd",
+    "clangd.semanticHighlighting": true,
+    "clangd.arguments": ["--clang-tidy"],
+    "clangd.fallbackFlags": ["-std=c++20"],
+    "python.pythonPath": "venv/bin/python",
+    "python.linting.enabled": true,
+    "python.linting.pylintEnabled": true,
+    "python.linting.pylintPath": ".venv/bin/pylint",
+    "python.venvPath": ".venv",
+    "python.formatting.provider": "yapf",
+    "python.formatting.yapfPath": ".venv/bin/yapf"
 }
