--- a/config/git/.gitconfig
+++ b/config/git/.gitconfig
@@ -5,3 +5,4 @@
 [alias]
     s = status
     c = commit -v
+    l = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(bold yellow)%d%C(reset)' --all
