--- a/config/polybar/.config/polybar/modules.ini
+++ b/config/polybar/.config/polybar/modules.ini
@@ -2,9 +2,8 @@
 ; 2021
 
 [module/alsa]
-    type = internal/alsa
+    type = internal/pulseaudio
     format-volume = <ramp-volume> <label-volume>
-    label-volume = %{A3:pavucontrol-qt:}%percentage%%%{A}
 
     format-muted-prefix = 
     label-muted = " Muted"
@@ -14,9 +13,6 @@
     ramp-volume-2 = 
     ramp-volume-3 = 
     ramp-volume-4 = 
-
-    ramp-headphones-0 = 
-    ramp-headphones-1 = 
 
 [module/xkeyboard]
     type = internal/xkeyboard
