--- a/config/polybar/.config/polybar/config.ini
+++ b/config/polybar/.config/polybar/config.ini
@@ -27,11 +27,11 @@
     module-margin = 1
     padding = 2
 
-    font-0 = "Fira Mono for Powerline:style=Medium:size=14;4"
+    font-0 = "SF Mono:style=Medium:size=14;4"
 ;   Can't get Kochi Gothic to be size=14
     font-1 = "Kochi Gothic:style=Regular:size=13;4"
     font-2 = "icomoon\\-feather:style=Regular:size=14;4"
-    font-3 = "Fira Mono for Powerline:style=Bold:size=14;4"
+    font-3 = "SF Mono:style=Bold:size=14;4"
 
     modules-left = bspwm
     modules-center = clock
