--- a/config/git/.gitconfig
+++ b/config/git/.gitconfig
@@ -6,6 +6,8 @@
 	co = checkout
 	cob = checkout -b
 	br = branch --format='%(HEAD) %(color:yellow)%(refname:short)%(color:reset) - %(contents:subject) %(color:green)(%(committerdate:relative)) [%(authorname)]' --sort=-committerdate
+    l = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(bold yellow)%d%C(reset)' --all
+    c = commit -v
 [difftool]
     prompt = true
 [diff]
@@ -16,3 +18,12 @@
     tool = nvimdiff
 [mergetool "nvimdiff"]
     cmd = "nvim -d \"$LOCAL\" \"$REMOTE\""
+[credential]
+    helper = "cache --timeout 5000"
+[core]
+	excludesFile = ~/.gitignore
+[filter "lfs"]
+	process = git-lfs filter-process
+	required = true
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
