--- a/config/neovim/.config/nvim/coc-settings.json
+++ b/config/neovim/.config/nvim/coc-settings.json
@@ -9,14 +9,11 @@
     "prettier.singleQuote": true,
     "prettier.printWidth": 120,
     "clangd.path": "/home/nekohacker/.config/coc/extensions/coc-clangd-data/install/12.0.0/clangd_12.0.0/bin/clangd",
-    "clangd.semanticHighlighting": true,
     "clangd.arguments": ["--clang-tidy"],
     "clangd.fallbackFlags": ["-std=c++20"],
-    "python.pythonPath": "venv/bin/python",
-    "python.linting.enabled": true,
-    "python.linting.pylintEnabled": true,
-    "python.linting.pylintPath": ".venv/bin/pylint",
+    "python.pythonPath": ".venv/bin/python",
     "python.venvPath": ".venv",
     "python.formatting.provider": "yapf",
-    "python.formatting.yapfPath": ".venv/bin/yapf"
+    "python.formatting.yapfPath": "/home/nekohacker/.local/bin/yapf",
+    "python.formatting.yapfArgs": ["--style", "/home/nekohacker/.config/yapf/sytle"]
 }
