--- a/config/gtk-3.0/.config/gtk-3.0/settings.ini
+++ b/config/gtk-3.0/.config/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=Arc-Dark
 gtk-icon-theme-name=Adwaita
-gtk-font-name=Noto Sans Display Medium 11
+gtk-font-name=DejaVu Sans Semi-Condensed 11
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
