--- a/config/picom/.config/picom.config
+++ b/config/picom/.config/picom.config
@@ -3,13 +3,15 @@
 
 #  -------------------------- Custom Stuff -------------------------- 
 
+xrender-sync-fence = true
 glx-no-stencil = true;
 glx-no-rebind-pixmap = true;
+use-damage = false
 
 #  -------------------------- Fading -------------------------- 
 
-fading = false;			# Fade windows during opacity changes.
-fade-delta = 4;		# The time between steps in a fade in milliseconds. (default 10).
+fading = true;			# Fade windows during opacity changes.
+fade-delta = 2;		# The time between steps in a fade in milliseconds. (default 10).
 fade-in-step = 0.10;		# Opacity change between steps while fading in. (default 0.028).
 fade-out-step = 0.10;		# Opacity change between steps while fading out. (default 0.03).
 
@@ -17,6 +19,10 @@ fade-out-step = 0.10;		# Opacity change between steps while fading out. (default
 
 inactive-dim = 0.15;		# Dim inactive windows. (0.0 - 1.0, defaults to 0).
 mark-wmwin-focused = true;	# Try to detect WM windows and mark them as active.
-detect-client-opacity = true;
+#detect-client-opacity = true;
+
+shadow-exclude = [
+    "class_g *?= 'slop'"
+];
 
 # vim: ft=cfg
