Make bar transparent

--- a/config/polybar/.config/polybar/modules.ini
+++ b/config/polybar/.config/polybar/modules.ini
@@ -43,7 +43,7 @@
 ;   in label-font indexes start with one, so use font+1
     label-font = 4
     type = custom/script
-    exec = "date +'%a, %-d %b at %R'"
+    exec = "date +'%a, %-d %b at %T'"
     interval = 1.0
 
 [module/bspwm]
