--- a/config/polybar/.config/polybar/config.ini
+++ b/config/polybar/.config/polybar/config.ini
@@ -10,15 +10,14 @@
     wm-restack = bspwm
     fixed-center = true
 
-;   bspwm gap is 13 so offsets shoud be equal 13
-    width = 100%:-26
-    height = 30
+    width = 100%
+    height = 25
 
-    offset-x = 13
-    offset-y = 13
+    offset-x = 0
+    offset-y = 0
 
-    radius = 15
-    border-size = 2
+    radius = 0
+    border-size = 0
     border-color = ${color.border}
 
     background = ${color.background}
@@ -27,15 +26,17 @@
     module-margin = 1
     padding = 2
 
-    font-0 = "Fira Mono for Powerline:style=Medium:size=14;4"
+    font-0 = "Fira Mono for Powerline:style=Medium:size=10;6"
 ;   Can't get Kochi Gothic to be size=14
-    font-1 = "Kochi Gothic:style=Regular:size=13;4"
-    font-2 = "icomoon\\-feather:style=Regular:size=14;4"
-    font-3 = "Fira Mono for Powerline:style=Bold:size=14;4"
+    font-1 = "Kochi Gothic:style=Regular:size=10;6"
+;   If icons don't get drawn for you try changing \- to \\- 
+;   This error exists on some polybar commits
+    font-2 = "icomoon\-feather:style=Regular:size=10;6"
+    font-3 = "Fira Mono for Powerline:style=Bold:size=10;6"
 
     modules-left = bspwm
     modules-center = clock
-    modules-right = network battery alsa xkeyboard
+    modules-right = alsa xkeyboard
 
     separator = |
     enable-ipc = true
