--- a/config/polybar/.config/polybar/colors.ini
+++ b/config/polybar/.config/polybar/colors.ini
@@ -1,5 +1,5 @@
 [color]
-    background = #292929
+    background = #00000000
     foreground = #C5C8C6
-    highlight = #5E8D87
+    highlight = #9aba99
     border = #373B41
