--- a/config/neovim/.config/nvim/coc-settings.json
+++ b/config/neovim/.config/nvim/coc-settings.json
@@ -16,5 +16,6 @@
       "--style",
       "/home/nekohacker/.config/yapf/sytle"
     ],
-    "clangd.path": "~/.config/coc/extensions/coc-clangd-data/install/15.0.3/clangd_15.0.3/bin/clangd",
+    "clangd.path": "~/.config/coc/extensions/coc-clangd-data/install/15.0.6/clangd_15.0.6/bin/clangd",
+    "snippets.ultisnips.pythonPrompt": false,
 }
