--- a/config/ncmpcpp/.config/mpd/mpd.conf
+++ b/config/ncmpcpp/.config/mpd/mpd.conf
@@ -13,8 +13,8 @@ input {
 }
 
 audio_output {
-        type            "pipewire"
-        name            "Default pipewire Output"
+       type     "pulse"
+       name     "pulse audio"
 }
 
 filesystem_charset "UTF-8"
