Update vscode config

--- a/config/vscodium/.config/VSCodium/User/settings.json
+++ b/config/vscodium/.config/VSCodium/User/settings.json
@@ -17,74 +17,172 @@
   "vim.enableNeovim": true,
   "vim.normalModeKeyBindingsNonRecursive": [
     {
-      "before": ["space", "c"],
-      "commands": ["workbench.action.showCommands"]
+      "before": [
+        "space",
+        "c"
+      ],
+      "commands": [
+        "workbench.action.showCommands"
+      ]
     },
     {
-      "before": ["<leader>", "r", "n"],
-      "commands": ["editor.action.rename"]
+      "before": [
+        "<leader>",
+        "r",
+        "n"
+      ],
+      "commands": [
+        "editor.action.rename"
+      ]
     },
     {
-      "before": ["<leader>", "g", "r"],
-      "commands": ["editor.action.goToReferences"]
+      "before": [
+        "<leader>",
+        "g",
+        "r"
+      ],
+      "commands": [
+        "editor.action.goToReferences"
+      ]
     },
     {
-      "before": ["<leader>", "g", "i"],
-      "commands": ["editor.action.goToImplementation"]
+      "before": [
+        "<leader>",
+        "g",
+        "i"
+      ],
+      "commands": [
+        "editor.action.goToImplementation"
+      ]
     },
     // Move
     {
-      "before": ["<leader>", "m", "v", "d"],
-      "commands": ["workbench.action.moveEditorToBelowGroup"]
+      "before": [
+        "<leader>",
+        "m",
+        "v",
+        "d"
+      ],
+      "commands": [
+        "workbench.action.moveEditorToBelowGroup"
+      ]
     },
     {
-      "before": ["<leader>", "m", "v", "u"],
-      "commands": ["workbench.action.moveEditorToAboveGroup"]
+      "before": [
+        "<leader>",
+        "m",
+        "v",
+        "u"
+      ],
+      "commands": [
+        "workbench.action.moveEditorToAboveGroup"
+      ]
     },
     {
-      "before": ["<leader>", "m", "v", "r"],
-      "commands": ["workbench.action.moveEditorToLeftGroup"]
+      "before": [
+        "<leader>",
+        "m",
+        "v",
+        "r"
+      ],
+      "commands": [
+        "workbench.action.moveEditorToLeftGroup"
+      ]
     },
     {
-      "before": ["<leader>", "m", "v", "l"],
-      "commands": ["workbench.action.moveEditorToRightGroup"]
+      "before": [
+        "<leader>",
+        "m",
+        "v",
+        "l"
+      ],
+      "commands": [
+        "workbench.action.moveEditorToRightGroup"
+      ]
     },
     // Split
     {
-      "before": ["<leader>", "s", "p", "d"],
-      "commands": ["workbench.action.splitEditorDown"]
+      "before": [
+        "<leader>",
+        "s",
+        "p",
+        "d"
+      ],
+      "commands": [
+        "workbench.action.splitEditorDown"
+      ]
     },
     {
-      "before": ["<leader>", "s", "p", "u"],
-      "commands": ["workbench.action.splitEditorUp"]
+      "before": [
+        "<leader>",
+        "s",
+        "p",
+        "u"
+      ],
+      "commands": [
+        "workbench.action.splitEditorUp"
+      ]
     },
     {
-      "before": ["<leader>", "s", "p", "l"],
-      "commands": ["workbench.action.splitEditorLeft"]
+      "before": [
+        "<leader>",
+        "s",
+        "p",
+        "l"
+      ],
+      "commands": [
+        "workbench.action.splitEditorLeft"
+      ]
     },
     {
-      "before": ["<leader>", "s", "p", "r"],
-      "commands": ["workbench.action.splitEditorRight"]
+      "before": [
+        "<leader>",
+        "s",
+        "p",
+        "r"
+      ],
+      "commands": [
+        "workbench.action.splitEditorRight"
+      ]
     },
     {
-      "before": ["<leader>", "q", "f"],
-      "commands": ["editor.action.quickFix"]
+      "before": [
+        "<leader>",
+        "q",
+        "f"
+      ],
+      "commands": [
+        "editor.action.quickFix"
+      ]
     },
     {
-      "before": ["<leader>", "e"],
-      "commands": ["notebook.cell.execute"]
+      "before": [
+        "<leader>",
+        "e"
+      ],
+      "commands": [
+        "notebook.cell.execute"
+      ]
     },
     {
-      "before": ["<leader>", "q", "q"],
-      "commands": ["workbench.action.closeWindow"]
+      "before": [
+        "<leader>",
+        "q",
+        "q"
+      ],
+      "commands": [
+        "workbench.action.closeWindow"
+      ]
     },
     {
-      "before": ["K"],
-      "commands": ["editor.action.showHover"]
+      "before": [
+        "K"
+      ],
+      "commands": [
+        "editor.action.showHover"
+      ]
     }
   ],
-  // Colors
-  "workbench.colorTheme": "Hybrid",
   "workbench.colorCustomizations": {
     "editor.background": "#0D0E0F",
     "editor.foreground": "#C5C8C6",
@@ -130,8 +228,13 @@
   "prettier.quoteProps": "consistent",
   // "prettier.proseWrap": "always",
   "prettier.singleQuote": true,
-  "python.linting.flake8Args": ["--max-line-length=120"],
-  "python.formatting.blackArgs": ["--line-length", "120"],
+  "python.linting.flake8Args": [
+    "--max-line-length=120"
+  ],
+  "python.formatting.blackArgs": [
+    "--line-length",
+    "120"
+  ],
   "python.linting.pylintEnabled": true,
   "python.linting.pylintArgs": [
     "--disable",
@@ -162,7 +265,6 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "redhat.telemetry.enabled": false,
-  "window.zoomLevel": 1,
   "gitlens.mode.active": "review",
   "workbench.activityBar.visible": false,
   "latex-workshop.latex.external.build.args": [
@@ -274,5 +376,7 @@
       ],
       "env": {}
     }
-  ]
+  ],
+  "workbench.colorTheme": "Hybrid",
+  "window.zoomLevel": 1
 }
