Don't dim bacground when screenshotting

--- a/config/picom/.config/picom.config
+++ b/config/picom/.config/picom.config
@@ -5,8 +5,7 @@ inactive-dim = 0.05;		# Dim inactive windows. (0.0 - 1.0, defaults to 0).
 mark-wmwin-focused = true;	# Try to detect WM windows and mark them as active.
 #detect-client-opacity = true;
 
-shadow-exclude = [
-    "class_g *?= 'slop'"
-];
+shadow-exclude = [ "class_g = 'slop'" ];
+focus-exclude = [ "class_g = 'slop'" ];
 
 # vim: ft=cfg
