Replace alsa with pulse

--- a/config/polybar/.config/polybar/config.ini
+++ b/config/polybar/.config/polybar/config.ini
@@ -31,12 +31,12 @@
     font-1 = "Kochi Gothic:style=Regular:size=10;6"
 ;   If icons don't get drawn for you try changing \- to \\- 
 ;   This error exists on some polybar commits
-    font-2 = "icomoon\-feather:style=Regular:size=10;6"
+    font-2 = "icomoon\\-feather:style=Regular:size=10;6"
     font-3 = "Fira Mono for Powerline:style=Bold:size=10;6"
 
     modules-left = bspwm
     modules-center = clock
-    modules-right = alsa xkeyboard
+    modules-right = pulseaudio xkeyboard
 
     separator = |
     enable-ipc = true
