--- a/config/polybar/.config/polybar/modules.ini
+++ b/config/polybar/.config/polybar/modules.ini
@@ -1,10 +1,10 @@
 ; github.com/mmskv
 ; 2021
 
-[module/alsa]
-    type = internal/alsa
+[module/pulseaudio]
+    type = internal/pulseaudio
     format-volume = <ramp-volume> <label-volume>
-    label-volume = %{A3:pavucontrol-qt:}%percentage%%%{A}
+;   label-volume = %{A3:pavucontrol:}%percentage%%%{A}
 
     format-muted-prefix = 
     label-muted = " Muted"
