Include work gitconfig

--- a/config/git/.gitconfig
+++ b/config/git/.gitconfig
@@ -29,3 +29,6 @@
 	required = true
 	clean = git-lfs clean -- %f
 	smudge = git-lfs smudge -- %f
+
+[includeIf "gitdir:~/work/"]
+    path = ~/work/.gitconfig
