Use nfs share for music

--- a/config/ncmpcpp/.config/mpd/mpd.conf
+++ b/config/ncmpcpp/.config/mpd/mpd.conf
@@ -1,4 +1,4 @@
-music_directory "~/music/"
+music_directory "nfs://192.168.88.88/warehouse/torrent/mu"
 
 playlist_directory "~/.config/mpd/playlists"
 db_file "~/.config/mpd/database"
