--- a/config/neovim/.config/nvim/coc-settings.json
+++ b/config/neovim/.config/nvim/coc-settings.json
@@ -1,21 +1,72 @@
 {
+    "coc.preferences.formatOnSave": true,
     "coc.preferences.formatOnSaveFiletypes": ["javascript", "markdown", "c++", "cpp", "hpp", "python", "c", "h"],
+    "diagnostic-languageserver.formatFiletypes": {
+        "python": ["black", "isort", "docformatter"]
+    },
     "tsserver.maxTsServerMemory": 10000,
-    "eslint.autoFixOnSave":true,
-    "eslint.format.enable":true,
-    "eslint.lintTask.options":["src/*"],
-    "eslint.alwaysShowStatus":true,
-    "prettier.tabWidth":4,
+    "eslint.autoFixOnSave": true,
+    "eslint.format.enable": true,
+    "eslint.lintTask.options": ["src/*"],
+    "eslint.alwaysShowStatus": true,
+    "prettier.tabWidth": 4,
     "prettier.singleQuote": true,
     "prettier.printWidth": 120,
-    "python.pythonPath": ".venv/bin/python",
-    "python.venvPath": ".venv",
-    "python.formatting.provider": "yapf",
-    "python.formatting.yapfPath": "/home/suck/.local/bin/yapf",
-    "python.formatting.yapfArgs": [
-      "--style",
-      "/home/suck/.config/yapf/sytle"
-    ],
     "clangd.path": "~/.config/coc/extensions/coc-clangd-data/install/15.0.6/clangd_15.0.6/bin/clangd",
     "snippets.ultisnips.pythonPrompt": false,
+    "diagnostic-languageserver.filetypes": {
+        "python": "pylint"
+    },
+    "diagnostic-languageserver.linters": {
+        "pylint": {
+            "sourceName": "pylint",
+            "command": "pylint",
+            "debounce": 100,
+            "args": [
+                "--output-format",
+                "text",
+                "--score",
+                "no",
+                "--msg-template",
+                "'{line}:{column}:{category}:{msg} ({msg_id}:{symbol})'",
+                "%file"
+            ],
+            "formatPattern": [
+                "^(\\d+?):(\\d+?):([a-z]+?):(.*)$",
+                {
+                    "line": 1,
+                    "column": 2,
+                    "endColumn": 2,
+                    "security": 3,
+                    "message": 4
+                }
+            ],
+            "rootPatterns": ["pyproject.toml", "setup.py", ".git"],
+            "securities": {
+                "informational": "hint",
+                "refactor": "info",
+                "convention": "info",
+                "warning": "warning",
+                "error": "error",
+                "fatal": "error"
+            },
+            "offsetColumn": 1,
+            "offsetColumnEnd": 1,
+            "formatLines": 1
+        }
+    },
+    "diagnostic-languageserver.formatters": {
+        "black": {
+            "command": "black",
+            "args": ["-q", "-"]
+        },
+        "isort": {
+            "command": "isort",
+            "args": ["-q", "-"]
+        },
+        "docformatter": {
+            "command": "docformatter",
+            "args": ["-"]
+        }
+    }
 }
